os/bluestore: adjust and validate bluefs_shared_alloc_size

Make sure it's in-sync (meaning it's higher or equal and properly aligned)
with bluestore_min_alloc_size into account

Fixes: https://tracker.ceph.com/issues/63618
Signed-off-by: Igor Fedotov <igor.fedotov@croit.io>
(cherry picked from commit 334e7fa0879512790e89d1f4d30cd6aaa81f28fa)